[package]
name = "template"
version = "0.1.0"
edition = "2021"
authors = ["zfz <_>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
anyhow = "1.0.44"
csv = "1.1.6"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"